--- a/offramp/package.json
+++ b/offramp/package.json
@@ -12,18 +12,19 @@
     "@supabase/ssr": "^0.8.0",
     "@supabase/supabase-js": "^2.48.0",
     "framer-motion": "^11.11.17",
-    "next": "14.2.5",
+    "next": "^15.1.6",
     "react": "18.3.1",
     "react-dom": "18.3.1"
   },
   "devDependencies": {
+    "@tailwindcss/postcss": "^4.1.18",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
-    "eslint": "^8.57.0",
-    "eslint-config-next": "14.2.5",
-    "postcss": "^8",
-    "tailwindcss": "^3.4.4",
+    "eslint": "^9.39.2",
+    "eslint-config-next": "^15.1.6",
+    "postcss": "^8.5.6",
+    "tailwindcss": "^4.1.18",
     "typescript": "^5.4.5"
   }
 }
