feat: initialize WhatsApp Bot with Flask and TypeScript
- Added main.py to set up Flask application with dotenv support.
- Created requirements.txt for necessary dependencies: Flask, httpx, and python-dotenv.
- Implemented agent.ts for handling message structures and payloads.
- Added systemPrompt.ts to manage system prompts from an external markdown file.
- Included system_role.md to define the OFFRAMP system role and conversation guidelines.

--- a/.gitignore
+++ b/.gitignore
@@ -7,11 +7,26 @@ yarn-error.log*
 pnpm-debug.log*
 lerna-debug.log*
 
+envi
 node_modules
 dist
 dist-ssr
 *.local
 .env*
+# Python
+__pycache__/
+*.py[cod]
+*.pyo
+.Python
+.venv/
+venv/
+env/
+.mypy_cache/
+.pytest_cache/
+.ruff_cache/
+.coverage
+coverage.xml
+
 # Editor directories and files
 .vscode/*
 !.vscode/extensions.json
