--- a/offramp/.gitignore
+++ b/offramp/.gitignore
@@ -10,6 +10,11 @@
 !.yarn/releases
 !.yarn/versions
 
+# lock files
+package-lock.json
+yarn.lock
+pnpm-lock.yaml
+
 # testing
 /coverage
 
@@ -32,6 +37,11 @@ yarn-error.log*
 
 # env files (can opt-in for committing if needed)
 .env*
+.env.example
+.env.local
+.env.test.local
+.env.production.local
+
 
 # vercel
 .vercel
