--- a/offramp/package.json
+++ b/offramp/package.json
@@ -13,9 +13,9 @@
     "@supabase/supabase-js": "^2.48.0",
     "bcryptjs": "^2.4.3",
     "framer-motion": "^11.11.17",
-    "next": "15.5.11",
-    "react": "18.3.1",
-    "react-dom": "18.3.1",
+    "next": "^15.5.11",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "styled-components": "^6.3.8"
   },
   "devDependencies": {
