--- a/offramp/package.json
+++ b/offramp/package.json
@@ -2,17 +2,24 @@
   "name": "offramp",
   "version": "0.1.0",
   "private": true,
+  "type": "module",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "server": "node src/server.js",
+    "server:dev": "node --watch src/server.js"
   },
   "dependencies": {
     "@supabase/ssr": "^0.8.0",
     "@supabase/supabase-js": "^2.48.0",
     "bcryptjs": "^2.4.3",
+    "cors": "^2.8.6",
+    "dotenv": "^16.6.1",
+    "express": "^4.22.1",
     "framer-motion": "^11.11.17",
+    "jsonwebtoken": "^9.0.3",
     "next": "^15.5.11",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
@@ -21,6 +28,7 @@
   "devDependencies": {
     "@tailwindcss/postcss": "^4.1.18",
     "@types/bcryptjs": "^2.4.6",
+    "@types/jsonwebtoken": "^9.0.10",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
