--- a/offramp/package.json
+++ b/offramp/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@supabase/ssr": "^0.8.0",
     "@supabase/supabase-js": "^2.48.0",
+    "@vercel/speed-insights": "^1.3.1",
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.6",
     "dotenv": "^16.6.1",
